<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>agora</groupId>
    <artifactId>beet</artifactId>
    <version>1.0-SNAPSHOT</version>

    <name>Beet</name>
    <description>A tool designed for instrumenting HTTP requests and responses performed to REST APIs in daikon format</description>

    <developers>
        <developer>
            <id>JuanCarlosAlonsoValenzuela</id>
            <name>Juan Carlos Alonso Valenzuela</name>
            <email>javalenzuela@us.es</email>
            <url>www.javalenzuela.com</url>
            <organization>University of Seville</organization>
            <organizationUrl>http://www.us.es</organizationUrl>
            <roles>
                <role>Developer</role>
            </roles>
        </developer>
    </developers>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <swagger.version>2.1.7</swagger.version>
        <openapivalidator.version>2.11.0</openapivalidator.version>
        <junit.jupiter.version>5.5.2</junit.jupiter.version>
        <junit.platform.version>1.5.2</junit.platform.version>
    </properties>

    <dependencies>

        <!-- SWAGGER DEPENDENCIES -->
        <dependency>
            <groupId>io.swagger.core.v3</groupId>
            <artifactId>swagger-core</artifactId>
            <version>${swagger.version}</version>
        </dependency>

        <!-- OPENAPI VALIDATOR DEPENDENCIES -->
        <!-- https://mvnrepository.com/artifact/com.atlassian.oai/swagger-request-validator -->
        <dependency>
            <groupId>com.atlassian.oai</groupId>
            <artifactId>swagger-request-validator-core</artifactId>
            <version>${openapivalidator.version}</version>
        </dependency>

        <!-- jUnit 5 -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>5.7.2</version>
        </dependency>

        <dependency>
            <groupId>org.junit.platform</groupId>
            <artifactId>junit-platform-runner</artifactId>
            <version>${junit.platform.version}</version>
            <scope>test</scope>
        </dependency>

        <!-- CSV library -->
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-csv</artifactId>
            <version>1.8</version>
        </dependency>

        <!-- String to JSON -->
        <dependency>
            <groupId>com.googlecode.json-simple</groupId>
            <artifactId>json-simple</artifactId>
            <version>1.1.1</version>
        </dependency>

        <!-- GSON -->
        <!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>2.13.2</version>
        </dependency>

    </dependencies>

</project>